--- a/style.css
+++ b/style.css
@@ -4,62 +4,503 @@
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
-body {
-    background: #1b263b;
-    color: #fff;
+html{
+    scroll-behavior: smooth;
 }
+
+body {
+    background: #efe3bd;
+    color: #282828;
+}
+
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(image/background.jpg);
+     background-image: url(image/portfolio\ background.jpg); 
     background-size: cover;
     background-position: center;
 }
+
 .container {
     padding: 10px 10%;
 }
+
+/* Center or align the menu without the logo */
+/* Align the menu to the right */
 nav {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    justify-content: flex-end; /* Aligns the menu to the right */
+    padding: 20px 0;
+    transition: 0.4s;
 }
-.logo {
-    width: 130px;
+
+#sidemenu {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
 }
+
 nav ul li {
     display: inline-block;
     list-style: none;
     margin: 10px 20px;
-    position: relative;
 }
+
 nav ul li a {
-    color: #fff;
+    color: #eb4b2f;
     text-decoration: none;
     font-size: 18px;
     position: relative;
 }
+
 nav ul li a::after {
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background:#eb4b2f;
     position: absolute;
     left: 0;
     bottom: -6px;
     transition: 0.4s;
 }
+
 nav ul li a:hover::after {
     width: 100%;
 }
-.header-text{
-    margin-top: 20%;
+
+nav ul li a {
+    color: #080808;
+    text-decoration: none;
+    font-size: 18px;
+}
+.header-text {
+    margin-top: 25%;
+    font-size: 20px;
+}
+
+.header-text h1 {
+    font-size: 60px;
+    margin-top: 10px;
+}
+.header-text h2 {
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+
+.header-text h1 span {
+    color:#eb4b2f;
+}
+
+#about {
+    padding: 80px 0;
+    display: flex;
+    color: #080808;
+    justify-content: space-around;
+}
+
+.row {
+    display: flex;
+    align-items: center;
+}
+
+.about-col-1 {
+    flex-basis: 40%;
+    padding: 10px;
+}
+
+.about-col-1 img{
+    width: 100%;
+    border-radius: 15px;
+}
+
+.about-col-2 {
+    flex-basis: 55%;
+}
+.about-col-2 h1{
+    color: #eb4b2f;
+    
+}
+
+.main-title {
+    font-size: 50px;
+    font-weight: 600;
+    color: rgb(4, 4, 4);
+}
+
+/* .subsamall-title {
     font-size: 30px;
+    color: rgb(255, 251, 0);
+} */
+
+.tab-title {
+    display: flex;
+    margin-top: 30px;
 }
-.header-text h1{
- font-size: 60px;
- margin-top: 20px;
+
+.tab-links {
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+    transition: color 0.4s;
 }
-.header-text h1 span{
-    color: orange;
+
+.tab-links:hover {
+    color: #eb4b2f;
 }
+
+.tab-links::after {
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #eb4b2f;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: width 0.4s;
+}
+
+.tab-links.active-link::after, .tab-links:hover::after {
+    width: 50%;
+}
+
+.tab-contents {
+    display: none;
+    margin-top: 20px;
+}
+
+.tab-contents.active-tab {
+    display: block;
+}
+
+.tab-contents ul li {
+    list-style: none;
+    margin: 10px 0;
+}
+
+.tab-contents ul li span {
+    color: #5244df;
+    font-size: 14px;
+}
+
+#Service {
+    padding: 30px 0;
+}
+
+.Services-list {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 50px;
+}
+
+.Services-list div {
+    background-color: #262626;
+    padding: 20px;
+    width: 30%;
+    border-radius: 10px;
+    color: #fff;
+    text-align: center;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.Services-list div:hover {
+    transform: scale(1.05);
+    background-color: #eb4b2f;
+}
+
+.Services-list div i {
+    font-size: 50px;
+    margin-bottom: 15px;
+    color: #5244df;
+    transition: color 0.3s ease;
+}
+
+.Services-list div:hover i {
+    color: #080808;
+}
+
+.Services-list h2 {
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.Services-list p {
+    font-size: 14px;
+    font-weight: 300;
+    margin: 10px 0;
+}
+
+.Services-list a {
+    display: inline-block;
+    margin-top: 10px;
+    color: #a29bfe;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.Services-list a:hover {
+    text-decoration: underline;
+}
+
+/* work list one row */
+#portfolio {  
+    padding: 50px 0;
+}
+
+.work-list {
+    display: grid;
+    border: #ff004f;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 40px; 
+    margin-top: 50px;
+}
+
+.work {
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    transition: transform 0.5s; 
+}
+
+.work:hover {
+    transform: scale(1.05); 
+}
+
+.work img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    display: block;
+    transition: all 0.5s;
+}
+
+.layer {
+    width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(246, 244, 244, 0.6), #eb4b2f);
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    color: rgb(255, 255, 255);
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    font-size: 14px;
+    transition: height 0.5s;
+}
+
+.layer {
+    font-weight: 50;
+    margin-bottom: 20px;
+}
+
+.layer a {
+    margin-top: 20px;
+    color: #eb4b2f;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 60px;
+    background: #fcf9f9;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    text-align: center;
+}
+
+.work:hover img {
+    transform: scale(1.1);
+}
+
+.work:hover .layer {
+    height: 100%;
+}
+.btn{
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    border: #eb4b2f;
+    padding: 14px 50px;
+    border-radius:6px;
+    background-color:  #eb4b2f;
+    text-decoration: none;
+    color: #080808;
+/
+}
+
+.btn:hover{
+    background-color: #5244df;
+} 
+/* ---------contact */
+.contact-left{
+    flex-basis: 35%;
+}
+.contact-right{
+    flex-basis: 60%;
+}
+.contact-left p{
+    margin-top: 30px;
+}
+.contact-left p i{
+    color: orangered;
+
+    margin: right 15px ;
+    font-size: 25px;
+}
+.social-icon{
+    margin-top: 30px;   
+}
+.social-icon a{
+    text-decoration: none;
+    font-size: 30px;
+    margin-right:15px ;
+    color:  #5244df;
+    display: inline-block;
+}
+.social-icon a:hover{
+    color: #eb4b2f;
+    transform: (-5px);
+}
+.btn.btn2{
+    display: #eb4b2f;
+
+}
+.contact-left{
+    width: 100%;
+}
+form input,form textarea{
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #353535;
+    padding: 15px;
+    margin: 15px 0;
+    color: #ff9d00;
+    font-size: 18px;
+    border-radius:10px;
+}
+form btn2{
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.copyright{
+    width: 100%;
+    text-align: center;
+    color: white;
+    padding: 15px 0;
+    background:#353535;
+    border-radius:10px;
+    font-weight:300 ;
+    margin-top: 20px;
+
+}
+button.submit-btn {
+    background-color:  #eb4b2f; /* Green background */
+    color: white; /* White text */
+    padding: 10px 20px;
+    border: none; /* Remove borders */
+    border-radius: 5px; /* Rounded corners */
+    cursor: pointer; /* Pointer on hover */
+    font-size: 16px;
+    transition: background-color 0.3s ease; /* Smooth transition for hover */
+}
+
+button.submit-btn:hover {
+    background-color: #5244df; /* Darker green on hover */
+}
+
+.copyright i{
+   color: #ff004f;
+}
+/* --------------------css for small screen */
+nav .fas{
+    display: none;
+}
+@media only screen and (max-width: 600px){
+    #header{
+        background-image: url(image/Screenshot\ 2024-11-15\ 000936.png);
+    }
+    .header-text{
+        margin-top: 100%;
+        font: size;
+    }
+    .header-text h1{
+        font-size: 30px;
+
+    }
+    .nav fas{
+       display:block;
+       font-size: 25px; 
+    }
+    nav ual{
+        background:gray;
+        position: fixed;
+        top: 0;
+        right: -200;
+        width: 200px;
+        height: 100vh;
+        padding-top:50Px ;
+        z-index: 2;
+        transition: right  0.5s ;
+    }
+    nav ul li{
+        display: block;
+        margin: 25px;
+    }
+    nav ul,.fas{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor:pointer;
+    }
+    .sub-title{
+        font-size:40px ;
+    }
+    .about-col-1, .about-col-2{
+        flex-basis: 100%;
+
+    }
+    .about-col-1{
+        margin-bottom: 30px;
+    }
+    .about-col-2{
+        font-size: 40px;
+    }
+    .tab-links{
+        font-size: 16px;
+        margin-right: 20px;
+    }
+    .contact-left,.contact-right{
+        flex-basis: 100%;
+    }
+    .copyright{
+        font-size: 40px;
+    }
+    #msg{
+        color: #ff6600;
+        margin-top: 10px ;
+        display: block;
+    }
+}
+    
+
+
+
+
+
+
+
+
