--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ nav ul li a {
 .header-text h1 span {
     color:#eb4b2f;
 }
-
+/* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%about%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */
 #about {
     padding: 80px 0;
     display: flex;
@@ -186,7 +186,7 @@ nav ul li a {
     color: #5244df;
     font-size: 14px;
 }
-
+/* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */
 #Service {
     padding: 30px 0;
 }
@@ -253,6 +253,27 @@ nav ul li a {
 #portfolio {  
     padding: 50px 0;
 }
+.sub-title{
+    font-size: 40px;
+    color:#eb4b2f ;
+}
+.sub-title1{
+    font-size: 40px;
+    color:#eb4b2f ;
+    margin-top: 20px;
+}
+.subsamall-title{
+font-size: 20px;
+margin-top: 10px;
+color: #5244df;
+
+}
+.subsamall1-title{
+    font-size: 20px;
+    margin-top: 10px;
+    color: #5244df;
+        }
+    
 
 .work-list {
     display: grid;
@@ -279,6 +300,13 @@ nav ul li a {
     border-radius: 10px;
     display: block;
     transition: all 0.5s;
+}
+.work:hover img {
+    transform: scale(1.1);
+}
+
+.work:hover .layer {
+    height: 100%;
 }
 
 .layer {
@@ -318,13 +346,7 @@ nav ul li a {
     text-align: center;
 }
 
-.work:hover img {
-    transform: scale(1.1);
-}
 
-.work:hover .layer {
-    height: 100%;
-}
 .btn{
     display: block;
     margin: 50px auto;
@@ -404,7 +426,7 @@ form btn2{
     background:#353535;
     border-radius:10px;
     font-weight:300 ;
-    margin-top: 20px;
+    margin-top: 70px;
 
 }
 button.submit-btn {
